[package]
name = "ro-parser"
version = "0.1.0"
authors = ["Mike White <botahamec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
ro-backend = {git = "https://github.com/Botahamec/ro-backend.git", branch="master"}